# solang

./: .gitignore  Cargo.toml  build.rs
docs/: optimizer.rst  running.rst
examples/: example.sol  incrementer.sol
integration/solana/: Child.json  Creature.json  Events.json  MyContractEvents.json  Printer.json  Seed1.json  Seed1.key  Seed2.json  Seed2.key  SimpleCollectible.json  TestingInstruction.json  Token.json  arrays.json  balances.json  builtins.json  calle_contract.json  callee.json  callee2.json  caller.json  create_contract.spec.ts  creator.json  debug_buffer.sol  debug_buffer.spec.ts  errors.json  errors.spec.ts  package.json  primitives.json  simple.spec.ts  storage.sol  store.json  verify_sig.json
integration/soroban/: auth_framework.spec.js  counter.spec.js  cross_contract.spec.js  runtime_error.spec.js  setup.js  storage_types.spec.js  token.sol  token.spec.js
integration/substrate/: debug_buffer.sol  debug_buffer.spec.ts  index.ts  package.json  primitives.spec.ts
integration/substrate/debug_buffer_tests/: debug_buffer.spec.ts
solang-parser/src/: lexer.rs  lib.rs  pt.rs  solidity.lalrpop  test.rs
src/: languageserver.rs  lib.rs  main.rs
src/abi/: tests.rs
src/codegen/: array_boundary.rs  cfg.rs  constant_folding.rs  expression.rs  mod.rs  solana_deploy.rs  statements.rs  storage.rs  vector_to_slice.rs
src/codegen/dispatch/: mod.rs  solana.rs  soroban.rs
src/codegen/encoding/: buffer_validator.rs  mod.rs  scale_encoding.rs  soroban_encoding.rs
src/codegen/events/: polkadot.rs
src/codegen/solana_accounts/: account_collection.rs  account_management.rs
src/codegen/statements/: mod.rs  try_catch.rs
src/codegen/strength_reduce/: mod.rs
src/codegen/subexpression_elimination/: instruction.rs
src/codegen/yul/: builtin.rs
src/emit/: binary.rs  expression.rs  functions.rs  instructions.rs  math.rs  mod.rs  strings.rs
src/emit/miden/: mod.rs
src/emit/polkadot/: target.rs
src/emit/solana/: target.rs
src/emit/soroban/: mod.rs  target.rs
src/emit/substrate/: dispatch.rs  mod.rs  target.rs
src/linker/: soroban_wasm.rs
src/lir/converter/: instruction.rs  lir_type.rs
src/sema/: ast.rs  builtin.rs  dotgraphviz.rs  eval.rs  expression.rs  mod.rs  namespace.rs  statements.rs  types.rs  unused_variable.rs  variables.rs
src/sema/expression/: function_call.rs  literals.rs  member_access.rs  mod.rs
src/sema/tests/: mod.rs
src/sema/yul/: expression.rs
src/sema/yul/tests/: expression.rs
stdlib/: bigint.c
stdlib/bpf/: bigint.bc
stdlib/wasm/: bigint.bc
tests/: contract.rs  solana.rs  soroban.rs  substrate.rs  undefined_variable_detection.rs
tests/codegen_testcases/solidity/: array_boundary_opt.sol  unused_variable_elimination.sol
tests/codegen_testcases/yul/: expression.sol
tests/contract_testcases/solana/: large_exponent.dot
tests/contract_testcases/substrate/arrays/: memory_dynamic_array_deref.dot  memory_dynamic_array_new_03.dot
tests/contract_testcases/substrate/primitives/: units.dot
tests/solana_tests/: runtime_errors.rs
tests/soroban_testcases/: mod.rs  token.rs
tests/substrate_tests/: array_boundary_check.rs  errors.rs  mod.rs
vscode/: package.json  tsconfig.json
vscode/src/client/: extension.ts
vscode/src/server/: server.ts
vscode_web/solang/: README.md  package-lock.json  package.json  solang-0.0.1.vsix  tsconfig.json  webpack.config.js
vscode_web/solang/src/web/: extension.ts  language_server.ts
